Fix curve bug in navbar when scrolling on mobile
Previously, when a user scrolled up when already at the top of the screen on mobile,
the nav bar would go down the page but not the curve at the bottom of it, giving
a weird bug where the nav bar and curve would separate.

--- a/components/header.module.css
+++ b/components/header.module.css
@@ -60,7 +60,10 @@
   border-bottom-left-radius:100%;
   border-bottom-right-radius:100%;
   transform: translateY(-50%);
-  position:fixed;
+  position:sticky;
+  top: 68px;
+  left: 0;
+  right: 0;
   z-index: 1000;
 }
 
